projects/vb6parse/snapshots/tests/statements/objects/call/call_statement_with_string_arguments.snap
---
source: projects/vb6parse/tests/statements/objects/call.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ShowMessage
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Hello, World!\""
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
